--- a/src/pages/usuarios-form/usuarios-form.scss
+++ b/src/pages/usuarios-form/usuarios-form.scss
@@ -1,3 +1,7 @@
 page-usuarios-form {
-
+	ion-avatar img{
+	    width: 180px !important;
+	    height: 180px !important;
+	    margin: 0 auto;
+	}
 }
