--- a/src/pages/cameras/cameras.scss
+++ b/src/pages/cameras/cameras.scss
@@ -1,3 +1,28 @@
 page-cameras {
-
+	.animated{
+		animation-duration: .5s;
+	}
+	.animated.fadeOut{
+		visibility: hidden;
+	}
+	.animated.fadeIn{
+		visibility: visible;
+	}
+	.scroll-content{
+		z-index: 99;
+	}
+	.modalVideo{
+		position: fixed;
+		top: 0;
+		width: 100%;
+		background-color: rgba(0,0,0, .8);
+		display: flex;
+		justify-content: center;
+    	align-items: center;
+    	height: 100%;
+    	transition: all .2s;
+	}
+	.modalVideo iframe{
+		border: none;
+	}
 }
