--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,10 +35,10 @@ $app-direction: ltr;
 
 $colors: (
   primary:    #488aff,
-  secondary:  #32db64,
+  secondary:  #51B0A6,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #555
 );
 
 
